tests/NormalTests/paczka2/big_fuzzy/63187442.err
Error in line 2: ChtX A53 47,2
Error in line 9: v0G S536 67,8
Error in line 11: v0G A53 90,3
Error in line 10: E8I S536 83,2
Error in line 22: E8I S762 93,5
Error in line 15: A53 S536 40,7
Error in line 32: A53 A53 79,5
Error in line 28: Tx1K5 S762 93,1
Error in line 34: E8I A53 77,7
Error in line 33: A53 S762 94,3
Error in line 36: Tx1K5 A53 83,6
Error in line 62: v0G S536 94,9
Error in line 70: E8I A355 85,50
Error in line 67: v0G A53 49,4
Error in line 76: Tx1K5 A53 -4,1
Error in line 73: v0G A355 52,0
Error in line 74: Tx1K5 A53 98,5
Error in line 86: fd4o3aM8h S536 16,2
Error in line 94: E8I S536 3,4
Error in line 97: E8I S762 33,9
Error in line 99: ChtX S762 49,0
Error in line 98: A53 A53 74,8
Error in line 110: Tx1K5 A355 60,7
Error in line 121: Tx1K5 S536 7,2
Error in line 123: vaajq S762 704
Error in line 129: ChtX S536 327,I
Error in line 125: vaajq S762 43,6
Error in line 127: ChtX S536 72,7
Error in line 130: vaajq A53 71,2
Error in line 135: Tx1K5 S536 67,3
Error in line 126: E8I S536 30,4
Error in line 141: E8I A355 91,4
Error in line 142: E8I A53 55,1
Error in line 145: A53 A355 16,4
Error in line 152: ChtX A53 -3,9
Error in line 147: ChtX A53 69,0
Error in line 158: ChtX S762 77,3
Error in line 181: E8I S762 100,0
Error in line 183: E8I A355 90,2
Error in line 190: E8I A53 65,7
Error in line 197: vaajq A355 -3,7
Error in line 199: E8I S762 68,95
Error in line 201: fd4o3aM8h S536 l7,4
Error in line 191: E8I S762 31,0
Error in line 206: E8I A53 4,7
Error in line 213: E8I S762 92,1
Error in line 223: v0G S536 -4,7
Error in line 205: fd4o3aM8h S536 10,1
Error in line 212: v0G S536 54,3
Error in line 225: v0G A355 85,4
Error in line 224: fd4o3aM8h A53 21,8
Error in line 234: fd4o3aM8h S536 26,4
Error in line 241: v0G S762 22,7
Error in line 233: vaajq S536 331,8
